--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/calc.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculadora CLT x PJ</title>
+    <meta name="description" content="Calcule facilmente a diferença salarial entre os regimes CLT e PJ com nossa calculadora online. Descubra as vantagens de cada regime e tome decisões informadas para o seu futuro profissional.">
+    <meta name="keywords" content="Calculadora de Diferença Salarial, CLT, PJ, Regime de Contratação, Salário, Benefícios">
+    <meta property="og:title" content="Calculadora de Diferença Salarial CLT PJ">
+    <meta property="og:description" content="Calcule facilmente a diferença salarial entre os regimes CLT e PJ.">
+    <meta property="og:image" content="https://calculadora.julioborges.net.br/calc.svg">
+    <meta property="og:url" content="https://calculadora.julioborges.net.br">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://calculadora.julioborges.net.br">
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "WebPage",
+      "name": "Calculadora de Diferença Salarial CLT PJ",
+      "description": "Calcule facilmente a diferença salarial entre os regimes CLT e PJ."
+    }
+    </script>
+
+    <title>Calculadora de Diferença Salarial CLT x PJ</title>
   </head>
   <body>
     <div id="root"></div>
