adjus file formating

--- a/index.html
+++ b/index.html
@@ -1,54 +1,78 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/calc.svg" />
-    <link rel="shortcut icon" type="image/svg+xml" href="/calc.svg">
+    <link rel="shortcut icon" type="image/svg+xml" href="/calc.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Calcule facilmente a diferença salarial entre os regimes CLT e PJ com nossa calculadora online. Descubra as vantagens de cada regime e tome decisões informadas para o seu futuro profissional.">
-    <meta name="keywords" content="Calculadora de Diferença Salarial, CLT, PJ, Regime de Contratação, Salário, Benefícios">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://calculadora.julioborges.net.br">
+    <meta
+      name="description"
+      content="Calcule facilmente a diferença salarial entre os regimes CLT e PJ com nossa calculadora online. Descubra as vantagens de cada regime e tome decisões informadas para o seu futuro profissional."
+    />
+    <meta
+      name="keywords"
+      content="Calculadora de Diferença Salarial, CLT, PJ, Regime de Contratação, Salário, Benefícios"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://calculadora.julioborges.net.br" />
     <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "WebPage",
-      "name": "Calculadora de Diferença Salarial CLT PJ",
-      "description": "Calcule facilmente a diferença salarial entre os regimes CLT e PJ."
-    }
+      {
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "name": "Calculadora de Diferença Salarial CLT PJ",
+        "description": "Calcule facilmente a diferença salarial entre os regimes CLT e PJ."
+      }
     </script>
 
-    <meta name="description" content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!">
-    <meta name="og:title" content="Calculadora CLT x PJ: Comparar Impostos e salários PJ">
-    <meta name="og:description" content="A Calculadora CLT x PJ, faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!">
-    <meta name="og:site_name" content="Calculadora CLT x PJ: Comparar Impostos e salários PJ">
+    <meta
+      name="description"
+      content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!"
+    />
+    <meta name="og:title" content="Calculadora CLT x PJ: Comparar Impostos e salários PJ" />
+    <meta
+      name="og:description"
+      content="A Calculadora CLT x PJ, faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!"
+    />
+    <meta name="og:site_name" content="Calculadora CLT x PJ: Comparar Impostos e salários PJ" />
 
-    <meta property="og:title" content="Calculadora de Diferença Salarial CLT x PJ">
-    <meta property="og:site_name" content="Calculadora de Diferença Salarial CLT x PJ">
-    <meta property="og:description" content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!">
-    <meta property="og:image" content="https://calculadora.julioborges.net.br/calc.svg">
-    <meta property="og:url" content="https://calculadora.julioborges.net.br">
-    <meta property="og:locale" content="pt-br">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Calculadora CLT x PJ: Comparar Impostos e salários PJ">
-    <meta property="og:description" content="A Calculadora CLT x PJ, faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!">
+    <meta property="og:title" content="Calculadora de Diferença Salarial CLT x PJ" />
+    <meta property="og:site_name" content="Calculadora de Diferença Salarial CLT x PJ" />
+    <meta
+      property="og:description"
+      content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!"
+    />
+    <meta property="og:image" content="https://calculadora.julioborges.net.br/calc.svg" />
+    <meta property="og:url" content="https://calculadora.julioborges.net.br" />
+    <meta property="og:locale" content="pt-br" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Calculadora CLT x PJ: Comparar Impostos e salários PJ" />
+    <meta
+      property="og:description"
+      content="A Calculadora CLT x PJ, faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!"
+    />
 
-    <meta name="apple-mobile-web-app-title" content="Calculadora CLT x PJ">
-    <meta name="article:publisher" content="https://www.linkedin.com/in/juliocezarborges/">
+    <meta name="apple-mobile-web-app-title" content="Calculadora CLT x PJ" />
+    <meta name="article:publisher" content="https://www.linkedin.com/in/juliocezarborges/" />
 
-    <meta property="twitter:image" content="https://calculadora.julioborges.net.br/calc.svg">
-    <meta property="twitter:card" content="product">
-    <meta property="twitter:title" content="Calculadora de Diferença Salarial CLT x PJ">
-    <meta property="twitter:description" content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!">
+    <meta property="twitter:image" content="https://calculadora.julioborges.net.br/calc.svg" />
+    <meta property="twitter:card" content="product" />
+    <meta property="twitter:title" content="Calculadora de Diferença Salarial CLT x PJ" />
+    <meta
+      property="twitter:description"
+      content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!"
+    />
 
-    <meta name="twitter:title" content="Calculadora de Diferença Salarial CLT x PJ">
-    <meta name="twitter:description" content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!">
-    <meta name="twitter:image" content="https://calculadora.julioborges.net.br/calc.svg">
-    <meta name="twitter:card" content="product">
-    <meta name="twitter:site" content="@JulioBorges_">
-    <meta name="twitter:creator" content="@JulioBorges_">
-  
+    <meta name="twitter:title" content="Calculadora de Diferença Salarial CLT x PJ" />
+    <meta
+      name="twitter:description"
+      content="A Calculadora CLT x PJ faz o calculo de salario PJ e compara o valor líquido que você recebe como CLT e PJ. Descubra qual vale mais a pena!"
+    />
+    <meta name="twitter:image" content="https://calculadora.julioborges.net.br/calc.svg" />
+    <meta name="twitter:card" content="product" />
+    <meta name="twitter:site" content="@JulioBorges_" />
+    <meta name="twitter:creator" content="@JulioBorges_" />
+
     <title>Calculadora de Diferença Salarial CLT x PJ</title>
   </head>
   <body>
